# Weather_Dashboard

./: .gitignore  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 57065a4b6cb6_change_users_table_password_column_to_.py  7be1bc4c1bb6_create_users_table.py
notebooks/: pyproject.toml  test.ipynb
src/: app_fastapi.py  app_streamlit.py  database.py  main.py  models.py
src/api/: openweather.py
src/ui/: ui_forecast.py
src/utils/: hashing.py  jwt.py  schemas.py  util_forecast.py
