[project]
name = "wether-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.120.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]

[tool.uv.workspace]
members = [
    "notebooks",
]
